First stable version of the App

--- a/pickleback/pickleback-Info.plist
+++ b/pickleback/pickleback-Info.plist
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
@@ -14,10 +14,10 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
-				<string>connected57.png</string>
-				<string>connected114.png</string>
-				<string>connected72.png</string>
-				<string>connected144.png</string>
+				<string>pickleback57.png</string>
+				<string>pickleback114.png</string>
+				<string>pickleback72.png</string>
+				<string>pickleback144.png</string>
 			</array>
 		</dict>
 	</dict>
