--- a/pickleback/pickleback-Info.plist
+++ b/pickleback/pickleback-Info.plist
@@ -22,7 +22,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.MobileServices.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.PBCo.pickleback</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
