--- a/pickleback/Drink Tally-Info.plist
+++ b/pickleback/Drink Tally-Info.plist
@@ -22,7 +22,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.pickleback</string>
+	<string>com.PBCo.drinktally</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
