--- a/pickleback/Drink Tally-Info.plist
+++ b/pickleback/Drink Tally-Info.plist
@@ -18,6 +18,8 @@
 				<string>pickleback114.png</string>
 				<string>pickleback72.png</string>
 				<string>pickleback144.png</string>
+				<string>DrinkTally.png</string>
+				<string>DrinkTally@2x.png</string>
 			</array>
 		</dict>
 	</dict>
@@ -30,11 +32,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.03</string>
+	<string>1.05</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.03</string>
+	<string>1.04</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
